--- a/style.css
+++ b/style.css
@@ -15,6 +15,34 @@
   --text-color: hsl(var(--hue), 40%, 98%);
   --primary-color: hsl(var(--hue), 100%, 63%);
   --controls-bg-color: hsl(var(--hue), 0%, 14%);
+  --button-secondary: hsl(var(--hue), 40%, 98%);
+}
+
+html.light {
+  --text-color: hsl(var(--hue), 5%, 7%);
+  --bg-color: hsl(var(--hue), 40%, 98%);
+}
+
+.running .ph-play-circle,
+.running .ph-timer,
+.music-on .ph-speaker-none,
+html:not(.running) .ph-pause-circle,
+html:not(.running) .ph-stop-circle,
+html:not(.music-on) .ph-speaker-high {
+  display: none;
+}
+
+html.light .ph-sun,
+html:not(.light) .ph-moon {
+  display: none;
+}
+
+.secondary {
+  color: var(--button-secondary);
+}
+
+.flex {
+  display: flex;
 }
 
 body {
@@ -32,8 +60,13 @@ body {
   align-items: center;
 }
 
-.flex {
-  display: flex;
+#toggle-mode {
+  position: absolute;
+  top: 3.2rem;
+  right: 3.2rem;
+  line-height: 0;
+
+  color: var(--text-color);
 }
 
 #timer {
@@ -61,8 +94,4 @@ button {
 
   border: 0;
   font-size: 4rem;
-}
-
-.secondary {
-  color: var(--text-color);
 }
