--- a/style.css
+++ b/style.css
@@ -45,6 +45,18 @@ html:not(.light) .ph-moon {
   display: flex;
 }
 
+.sr-only {
+  width: 1px;
+  height: 1px;
+  position: absolute;
+  overflow: hidden;
+
+  margin: -1px;
+  padding: 0px;
+  border: 0;
+  appearance: none;
+}
+
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
